public/stylesheets/style.css
body { 
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 12px;
}

ul { 
    list-style-type: none;
}

label { 
    display: block;
    font-weight: 600;
}

button { 
    color: white;
    background-color: black;
    border: 0;
    border-radius: 2px;
    padding: 5px 10px;
}

a { 
    color: inherit;
    text-decoration: none;
    font-weight: 500;
}

header { 
    color: white;
    background-color: black;
    width: 100%;
    padding: 15px;
    margin: -12px;
    margin-bottom: 25px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header h1 { 
    margin: 0px;
    padding: 0px;
    margin-left: 25px;
}

nav { 
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 50px;
    margin-right: 25px;
}

